<resources>
    <string name="slogan">Поможем найти твою следующую поездку</string>
    <string name="app_name" translatable="false">DriveNext</string>
    <string name="main_image_description" translatable="false">Main Logo</string>
    <string name="rent_image_description" translatable="false">Rent IMG</string>
    <string name="line" translatable="false">Process line</string>
    <string name="no_internet_icon" translatable="false">No Internet Connection</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="no_connection_retry">Проверьте подключение и повторите попытку</string>
    <string name="miss_btn">Пропустить</string>
    <string name="next_btn">Далее</string>
    <string name="drive_btn">Поехали</string>
    <string name="retry_btn">Повторите попытку</string>
    <string name="car_rent">Аренда автомобилей</string>
    <string name="car_rent_txt">Открой для себя удобный и доступный способ передвижения</string>
    <string name="safe">Безопасно и удобно</string>
    <string name="safe_txt">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="offers">Лучшие предложения</string>
    <string name="offers_txt">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="use">Пользуйтесь с удовольствием</string>
    <string name="congrats">Поздравляем</string>
    <string name="congrats_txt">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="enter_acc">Войдите в аккаунт</string>
    <string name="input_data">Пожалуйста, введите свои данные</string>
    <string name="input_email">Введите электронную почту</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="input_password">Введите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_google">Войти с Google</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="create_pass">Придумайте пароль</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="privacy">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="back_btn" translatable="false">Back Button</string>
    <string name="surname">Фамилия</string>
    <string name="input_surname">Введите фамилию</string>
    <string name="name">Имя</string>
    <string name="input_name">Введите имя</string>
    <string name="patronymic">Отчество</string>
    <string name="input_patronymic">Введите отчество</string>
    <string name="birth">День рождения</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="birth_format" translatable="false">DD/MM/YYYY</string>
    <string name="calendar" translatable="false">calendar</string>
    <string name="add_photo_txt">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="licence_id">Номер водительского удостоверения</string>
    <string name="licence_valid" translatable="false">0000000000</string>
    <string name="issue_date">Дата выдачи</string>
    <string name="load_licence">Загрузите фото водительского удостоверения</string>
    <string name="load_passport">Загрузите фото паспорта</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="settings">Настройки</string>
    <string name="full_name">Имя Фамилия</string>
    <string name="my_booking">Мои бронирования</string>
    <string name="theme">Тема</string>
    <string name="notifications">Уведомления</string>
    <string name="connect_car">Подключить свой автомобиль</string>
    <string name="help">Помощь</string>
    <string name="inviting">Пригласи друга</string>
    <string name="email_temp" translatable="false">mail@mail.ru</string>
    <string name="next_arrow" translatable="false">next arrow</string>
    <string name="booking_icon" translatable="false">booking icon</string>
    <string name="theme_icon" translatable="false">theme icon</string>
    <string name="bell_icon" translatable="false">bell icon</string>
    <string name="cash_icon" translatable="false">cash icon</string>
    <string name="help_icon" translatable="false">help icon</string>
    <string name="mail_icon" translatable="false">mail icon</string>
    <string name="home_icon" translatable="false">home icon</string>
    <string name="bookmark" translatable="false">bookmark</string>
    <string name="settings_icon" translatable="false">settings icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_saved_cars">Нет сохраненных автомобилей</string>
    <string name="profile">Профиль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="google" translatable="false">Google</string>
    <string name="logout">Выйти из профиля</string>
    <string name="joined">Присоединился</string>
    <string name="looking_for_cars">Ищем подходящие автомобили</string>
    <string name="book">Забронировать</string>
    <string name="details">Детали</string>
    <string name="engine_type">Бензин</string>
    <string name="transmission" translatable="false">A/T</string>
    <string name="per_day">%1$s в день</string>
    <string name="search_hint">Введите марку автомобиля</string>
    <string name="find_car">Давайте найдем автомобиль</string>
    <string name="search_result">Результаты поиска</string>
    <string name="no_search_results">Нет доступных автомобилей</string>
    <string name="search_btn">Найти</string>
    <string name="saved" translatable="false">saved</string>
    <string name="saved_txt">Сохраненные автомобили</string>


</resources>
