<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_no_internet"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/no_connection"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/no_internet_icon" />

    <TextView
        android:id="@+id/no_connection"
        android:layout_width="239dp"
        android:layout_height="82dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.7"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/no_connection"
        android:textColor="#1A1A1A"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/no_connection_retry"
        android:layout_width="318dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/no_connection_retry"
        android:textColor="#1A1A1A"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry"
        android:layout_width="342dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/retry_btn"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/theme"
        app:cornerRadius="8dp" />


</LinearLayout>
