<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/use_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/use"
        android:textColor="#101828"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rent_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/check_circle"
        android:layout_marginStart="157dp"
        android:layout_marginTop="257dp"
        android:contentDescription="@string/main_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/congrats"
        android:textColor="#1A1A1A"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/congrats_txt"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="444dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/congrats_txt"
        android:textColor="#1A1A1A"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="342dp"
        android:layout_height="62dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="736dp"
        android:backgroundTint="@color/theme"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/next_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>