<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="24sp"
        android:textColor="@color/theme"
        android:layout_gravity="start"
        android:layout_marginStart="34dp"
        android:layout_marginTop="122dp" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="start"
        android:layout_marginStart="34dp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="343dp"
        android:layout_height="342dp"
        android:src="@drawable/main_logo"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/main_image_description"/>

</LinearLayout>
