<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/main_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="20sp"
        android:textColor="#1A1A1A"
        android:layout_gravity="start"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/back_btn"
        android:src="@drawable/chevron_left"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="14sp"
        android:textColor="#404040"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="280dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/input_surname"
        android:layout_marginTop="152dp"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_line"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textColor="#667085"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="14sp"
        android:textColor="#404040"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginEnd="316dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/input_name"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_line"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textColor="#667085"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/patronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patronymic"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="14sp"
        android:textColor="#404040"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginEnd="280dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patronymicInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/input_patronymic"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patronymicEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_line"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textColor="#667085"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="14sp"
        android:textColor="#404040"
        app:layout_constraintTop_toBottomOf="@id/patronymicInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginEnd="230dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/birth_format"
        app:boxBackgroundMode="none"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@id/patronymicInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp">
        
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/calendar_days"
            android:contentDescription="@string/calendar"
            android:layout_marginTop="-36dp"
            android:layout_marginStart="14dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_line"
            android:paddingStart="42dp"
            android:paddingEnd="14dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textColor="#667085"
            android:inputType="date"
            android:importantForAccessibility="yes"
            android:maxLength="10"
            android:focusable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="14sp"
        android:textColor="#404040"
        app:layout_constraintTop_toBottomOf="@id/birthInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginEnd="317dp"/>

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/birthInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp">

        <RadioButton
            android:id="@+id/radio_btn_male"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/custom_radiobutton"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/male"
            android:textColor="#667085"
            android:textSize="14sp"
            android:layout_marginEnd="32dp"/>

        <RadioButton
            android:id="@+id/radio_btn_female"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/custom_radiobutton"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/female"
            android:textColor="#667085"
            android:textSize="14sp" />
    </RadioGroup>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="342dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/theme"
        android:text="@string/next_btn"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        android:layout_marginTop="758dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"  />



</androidx.constraintlayout.widget.ConstraintLayout>